images on 404 from /public

--- a/public/404.html
+++ b/public/404.html
@@ -19,12 +19,12 @@
 <body>
   <!-- This file lives in public/404.html -->
   <div>
-    <img src="/assets/404.gif" alt="404 feiyue-solar page">
+    <img src="/404.gif" alt="404 feiyue-solar page">
   </div>
   <div class="dialog">
     <h1>
       <a href="http://feiyuesolar.nl">
-        <img src="/assets/store/logo.png" alt="feyiue-solar logo">
+        <img src="/logo.png" alt="feyiue-solar logo">
       </a>
     </h1>
     <p>You may have mistyped the address or the page may have moved.</p>
